# rwatch

./: Cargo.toml  README.md  rwatch.service
rwatch/: Cargo.toml  build.rs  rules.yaml
rwatch-common/: Cargo.toml
rwatch-common/src/: lib.rs
rwatch-ebpf/: Cargo.toml
rwatch-ebpf/src/: main.rs
rwatch/src/: main.rs  rule_engine.rs  webhook.rs
