[package]
name = "rwatch-common"
version = "0.1.0"
edition = "2021"

license.workspace = true

[features]
default = []
user = ["aya", "serde"]

[dependencies]
aya = { workspace = true, optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[lib]
path = "src/lib.rs"
